--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -323,6 +323,7 @@ $font-size-print-base-small: ($font-size-base - 2);
 
 $font-size-contentmenu-title: ($font-size-base + 2);
 $font-size-contentmenu-link: $font-size-base;
+$font-size-contentmenu-listview: ($font-size-base - 1);
 
 $contentmenu-xxs-width: 182px;
 $contentmenu-default-width: 302px;
