--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -83,9 +83,6 @@ $slider-height-md: 512px;
 			    a {
 				text-decoration: none;
 
-
-			    //    overflow: hidden;
-			    //    text-overflow: ellipsis;
 			    // Notice: overflow hidden (und damit auch word-wrap: nowarp
 			    // sorgt für ein WCAG AA Problem und kann daher nicht verwendet werdne.
 			    // Falls der Text tatsächlich zu lang wird, muss das Design ihn trotzdem 
@@ -94,61 +91,20 @@ $slider-height-md: 512px;
 			    // Daher erstmal auskommentiert - WW, 28.06.2023
 
 				white-space: normal;
-
-				display: -webkit-box;
-				-webkit-line-clamp: 1;
-				-webkit-box-orient: vertical;
 				max-width: 100%;      
 				opacity: 1;
-				padding: var(--width-gutter-half, 15px) var(--width-gutter, 35px);
 				font-weight: 700;
 				display: inline-block;
 				background-color: var(--color-primary-ci-hell);
 				border-radius: var(--border-radius, 0px);  
 				margin: 0 auto;
 				text-align: left;
+				padding: var(--width-gutter-half, 15px);
+				
+				@media (min-width: $screen-sm)  {
+				    padding: var(--width-gutter-half, 15px) var(--width-gutter, 35px);
+				}
 
-				    @media screen and (min-width: $screen-lg)  {
-					-webkit-line-clamp: 1;
-			    //	    text-overflow: ellipsis;
-					-webkit-box-orient: horizontal;
-			    //	    white-space: nowrap;
-				    }
-
-				    @media screen and (min-width: $screen-md)  {
-					-webkit-line-clamp: 1;
-			    //	    text-overflow: ellipsis;
-					-webkit-box-orient: horizontal;
-			    //	    white-space: nowrap;
-				    }
-
-				    @media screen and (min-resolution: 200dpi), screen and  (max-width: $screen-lg)  {
-
-					-webkit-line-clamp: 2;
-					-webkit-box-orient: vertical;
-					white-space: normal;
-					margin-top: -40px;
-		//			max-height: 125px;
-				    }
-
-				    @media (max-width: $screen-sm)  {
-			    //	    overflow: hidden;
-			    //	    text-overflow: ellipsis;
-					display: -webkit-box;
-					-webkit-line-clamp: 2;
-					-webkit-box-orient: vertical;
-			//		height: 85px;
-					padding: var(--width-gutter-half, 15px);
-					white-space: normal;
-
-					@media screen and (min-resolution: 200dpi), screen and  (max-width: $screen-lg)  {
-						-webkit-line-clamp: 2;
-						-webkit-box-orient: vertical;
-						white-space: normal;
-						margin-top: 0px;
-		//				max-height: 125px;
-					}
-				    }
 			    }
 
 			}
@@ -165,13 +121,7 @@ $slider-height-md: 512px;
 			bottom: 0;
 			right: 0;
 			text-align: right;
-			
-		//	overflow: hidden;
-		//	text-overflow: ellipsis;
-		//	display: -webkit-box;
-		//	-webkit-line-clamp: 1; /* number of lines to show */
-		//	line-clamp: 1; 
-		//	-webkit-box-orient: vertical;
+
 			@media (max-width: $screen-sm) {
 				top: 0;
 				bottom: auto;
@@ -179,18 +129,12 @@ $slider-height-md: 512px;
 		}
 		
 		img {
-		//	vertical-align: middle;
-		//	height: $slider-maxheight;	
-		//	background: linear-gradient(180deg,rgba(255,255,255,0) 45%,rgba(0,51,102,.8));
-		//	clip-path: polygon(0px 100% , 0px 7%, 100% 0%, 100% 100%);
-		//	@include transform-translate(-50%, 0);
 			z-index: 5;
 			min-width: 100%;			
 			object-fit: cover;		
 			height: 100%;
 			max-height: $slider-maxheight;
 			min-height: $slider-minheight;
-			// max-height: 128px; // $slider-minheight;	
 			
 			@media (min-width: $screen-sm) {
 				min-height:  $slider-height-sm;
@@ -345,7 +289,7 @@ $slider-height-md: 512px;
 			bottom: inherit;
 		}
 		@media (max-width: $screen-sm) {
-			right:calc(50% - 20px);
+			right:calc(50% - 14px);
 			top: 50%;
 		}
 
