- Fehlermelddeseiten können nun mit Hilfe von Widgets angepasst werden - Bei der Handyauflösung ist das Banner der Startseite nun object-fit: cover und min-height wie bei dem Slider auf 128px;

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -356,6 +356,7 @@ $slider-height-md: 512px;
 $slider-arrow-width: 40px;
 
 $banner-startpage-width:1260px;
+$banner-startpage-minheight: $slider-minheight;
 
 // Define breakpoints
 
